--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ bytes = "1.4.0"
 futures = "0.3.28"
 async-trait = "0.1.68"
 tower-http = "0.4.1"
+uuid = { version = "1.3.4", features = ["serde", "v4"] }
+base64 = "0.21.2"
+serde = { version = "1.0.164", features = ["derive"] }
+serde_json = "1.0.99"
