--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ uuid = { version = "1.3.4", features = ["serde", "v4"] }
 base64 = "0.21.2"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
+hyper = "0.14.27"
