--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ base64 = "0.21.2"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.99"
 hyper = "0.14.27"
+http-body = "0.4.5"
